--- a/Python/P9_灰色与模糊问题原理及Python编程实现.ipynb
+++ b/Python/P9_灰色与模糊问题原理及Python编程实现.ipynb
@@ -19,9 +19,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "714de8bb-5e5a-4c39-98a1-a147349434ba",
+   "metadata": {},
+   "source": [
+    "![](./img/P9_1.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6fabf34-1b66-49c2-a2aa-9198fb2eaecd",
+   "id": "c4d8757a-d83d-46c9-bc13-f93d420f899e",
    "metadata": {},
    "outputs": [],
    "source": []
